Added page_number and page_size in response
